# arastudy-morphology

./: .gitignore  README.md  pyproject.toml  requirements.txt
cloud_package/: bpe_16k.model  cloud_train.py  root_ids_lookup.npy  word_pairs.json
configs/experiment/: exp002_morph_data.yaml  exp003_root_emb.yaml
configs/model/: base_30m.yaml  small_10m.yaml
configs/training/: default.yaml
data/morphology/: morph_data_clean_stats.json  morph_data_stats.json  morphology_guide.md  pattern_definitions.json  root_database.json  root_word_lists.txt  root_word_lists_clean.txt  token_root_map.json
docs/: literature_review_top10.md  morphology_revised_plan.md
notebooks/: cloud_train.py  cloud_training.ipynb  kaggle_training.py
paper/: paper.md
results/: bootstrap_test.json
results/analysis/: final_analysis_summary.json  layer_wise_comparison.json  run_final_analysis_output.txt  task1_layerwise_output.txt  task2_10m_probing.json  task2_10m_probing_output.txt  task3_generation_output.txt  task3_generation_outputs.json
scripts/: analyze_tokenizer.py  build_morph_data.py  build_morph_data_only_corpus.py  build_root_database.py  build_word_pairs.py  clean_corpus_v2.py  clean_morph_data.py  download_wikipedia.py  evaluate.py  extract_baseline_embeddings.py  mix_morph_data.py  phase0_probe_root_similarity.py  precompute_root_ids.py  run_final_analysis.py  run_phase12_after_10m.sh  run_phase2_after_10m.sh  test_camel_pipeline.py  train_model.py  train_tokenizer.py  validate_morphology.py
src/: __init__.py
tests/: test_evaluation.py  test_model.py
(+26 files in other folders)
